[gd_scene load_steps=4 format=3 uid="uid://jcx54cxn86yc"]

[ext_resource type="Script" path="res://scripts/upgrades/neuro/inuke6000.gd" id="1_bwwdp"]
[ext_resource type="PackedScene" uid="uid://b5326ppiejrxm" path="res://scenes/shared/enemy_search_area.tscn" id="2_jh5rr"]
[ext_resource type="Script" path="res://scripts/shared/ai_cooldown_timer.gd" id="3_vmg4d"]

[node name="iNuke6000" type="Node2D"]
script = ExtResource("1_bwwdp")

[node name="EnemySearchArea" parent="." instance=ExtResource("2_jh5rr")]
collision_mask = 6

[node name="LaunchTimer" type="Timer" parent="."]
autostart = true
script = ExtResource("3_vmg4d")

[connection signal="timeout" from="LaunchTimer" to="." method="_on_launch_timer_timeout"]
